--- a/src/app/components/Hero/Hero.module.scss
+++ b/src/app/components/Hero/Hero.module.scss
@@ -17,6 +17,13 @@
     color: #eaecec;
     padding-left: 8rem;
   }
+  &:not(:hover) {
+    transition-property: "padding-left";
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in-out;
+    transition-delay: 0.1s;
+    padding-left: 5rem;
+  }
 }
 
 .item {
@@ -37,6 +44,13 @@
     color: #eaecec;
     padding-left: 8rem;
   }
+  &:not(:hover) {
+    transition-property: "padding-left";
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in-out;
+    transition-delay: 0.1s;
+    padding-left: 5rem;
+  }
 }
 
 .itemTwo {
@@ -55,6 +69,13 @@
     color: #eaecec;
     padding-left: 8rem;
   }
+  &:not(:hover) {
+    transition-property: "padding-left";
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in-out;
+    transition-delay: 0.1s;
+    padding-left: 5rem;
+  }
 }
 
 .container {
@@ -67,6 +88,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: 9rem;
-  color: #eaecec23;
+  font-size: 7rem;
+  color: #eaecec20;
 }
