--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,12 +49,12 @@ body {
 }
 
 html {
-  font-size: calc(100vw / 1728 * 10);
+  font-size: calc(100vw / 1728 * 13);
 }
 
 body {
   font-size: clamp(16px, 1.6rem, 1.6rem);
-  font-family: "Matter Regular", sans-serif;
+  /* font-family: "Matter Regular", sans-serif; */
 
   font-style: normal;
   font-variation-settings: "ital" 0, "wght" 400;
